--- a/addclient.yml
+++ b/addclient.yml
@@ -24,6 +24,10 @@
       yum: name=katello-agent state=present
     - name: Install Puppet agent
       yum: name=puppet state=present
+    - name: Remove Puppet Config file
+      file: path=/etc/puppet/puppet.conf state=absent
+    - name: Remove Puppet SSL Config files
+      file: path=/var/lib/puppet/ssl state=absent
     - name: Replace Puppet Config file with new one
       template: src=templates/puppet.conf.j2 dest=/etc/puppet/puppet.conf
 
