--- a/variables.yml
+++ b/variables.yml
@@ -10,5 +10,5 @@ activation_key: "rhel7-dev"
 # The puppet environment should be set to the environment where the managed host belongs.  This is fed into the puppet.conf template
 puppet_environment: "production"
 client_system: "test1.cloud.lab"
-capsule_server: "satellite62.cloud.lab"
-satellite_server: "satellite62.cloud.lab"
+capsule_server: "sat62-ga.cloud.lab"
+satellite_server: "sat62-ga.cloud.lab"
