--- a/addclient.yml
+++ b/addclient.yml
@@ -23,7 +23,7 @@
       command: /usr/bin/subscription-manager repos --disable "*"
     - name: Remove local repos
       file: path=/etc/yum.repos.d/media.repo state=absent
-    - name: Enable all repos
+    - name: Enable repos
       command: /usr/bin/subscription-manager repos --enable rhel-7-server-rpms --enable rhel-7-server-satellite-tools-6.2-rpms
     - name: Install Katello agent
       yum: name=katello-agent state=present
